--- a/index.html
+++ b/index.html
@@ -1,12 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Portfolio</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Input to Output</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f9;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+    .container {
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      max-width: 400px;
+      width: 100%;
+      text-align: center;
+    }
+    textarea, button {
+      width: 100%;
+      margin-top: 10px;
+      padding: 10px;
+      font-size: 16px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+    }
+    button {
+      background-color: #007bff;
+      color: white;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #0056b3;
+    }
+    .output {
+      margin-top: 20px;
+      padding: 10px;
+      background-color: #f0f0f0;
+      border-radius: 5px;
+    }
+  </style>
 </head>
 <body>
-  <p>Hello, World!</p>
+  <div class="container">
+    <h1>Input to Output</h1>
+    <textarea id="input" rows="4" placeholder="Enter your input here..."></textarea>
+    <button onclick="processInput()">Submit</button>
+    <div id="output" class="output" style="display: none;"></div>
+  </div>
+
+  <script>
+    async function processInput() {
+      const input = document.getElementById('input').value;
+
+      try {
+        // Replace `/api/process` with your actual backend endpoint
+        const response = await fetch('/api/process', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ input }),
+        });
+
+        const data = await response.json();
+        const outputDiv = document.getElementById('output');
+        outputDiv.style.display = 'block';
+        outputDiv.innerText = `Output: ${data.output}`;
+      } catch (error) {
+        console.error('Error:', error);
+        alert('Something went wrong!');
+      }
+    }
+  </script>
 </body>
 </html>
