--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JuDda Encoder/Decoder</title>
+    <title>쭈땨어 번역기</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Text Encoder/Decoder</h1>
+        <h1>.주땨조.조.뜌.조.땨조?!뜌.주땨땨주조?형땨뜌땨?!??조형조땨??조조.!주주?!조.뜌!형뜌뜌뭐뭐</h1>
         
         <!-- Encode Section -->
         <section>
@@ -26,6 +26,11 @@
             <textarea id="outputTextDecode" placeholder="Decoded text will appear here..."></textarea>
         </section>
     </div>
+
+    <!-- Footer with copyright -->
+    <footer>
+        <p>&copy; 2025 minje4830. All Rights Reserved. Based on the work of the original author: <a href="https://github.com/i3l3/ddunigma" target="_blank">GitHub Repository</a>.</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
