--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         </section>
     </div>
 
-    <!-- Footer with copyright -->
-    <footer>
-        <p>&copy; 2025 minje4830. All Rights Reserved. Based on the work of the original author: <a href="https://github.com/i3l3/ddunigma" target="_blank">GitHub Repository</a>.</p>
-    </footer>
+    <!-- (not) Footer with copyright -->
+    
+    <p>&copy; 2025 minje4830. All Rights Reserved. Based on the work of the original author(i3l3 & Rnsn): <a href="https://github.com/i3l3/ddunigma" target="_blank">GitHub Repository</a>.</p>
+    
 
     <script src="script.js"></script>
 </body>
