--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>쭈땨어 번역기!!!!!!!</title>
+    <title>쭈땨어 번역기</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>.주땨조.조.뜌.조.땨조?!뜌.주땨땨주조?형땨뜌땨?!??조형조땨??조조.!주주?!조.뜌!형뜌뜌뭐뭐</h1>
+        <h1>..조.땨?조땨형.조.땨조?!뜌땨뜌땨??조형땨!형땨??조형주!.땨???주뜌형!조뜌뭐뭐</h1>
         
         <!-- Encode Section -->
         <section>
