--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>쭈땨어 번역기</title>
+    <title>존박어 번역기</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
 
-        <h1>.주땨주??조형.조.조.?.뜌.주땨주??조형.주주뜌주조형뜌땨뜌땨???주땨형!땨??조주!!!땨???땨형형땨조뜌뭐뭐</h1>
+        <h1>쭈땨어 번역기의 관심도가 떨어짐에 따라 사이버불링의 타겟을 변경</h1>
         
         <!-- Encode Section -->
         <section>
@@ -32,3 +32,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
